# ton

./: CMakeLists.txt  b.sh
crypto/test/: vm.cpp
fuzz/: CMakeLists.txt  README.md  boc.proto  fuzz_fift.cpp  fuzz_vm.cpp  fuzz_vm_proto.cpp
fuzz/seeds/: EQC4gFoyLg2kcT06coQ7wluhSPkqOhgAmgj-U9FlL-eCw9xj.boc  EQC4gFoyLg2kcT06coQ7wluhSPkqOhgAmgj-U9FlL-eCw9xj.hex  UQALUqD9CtF3Qh6auU6zkb83ZjQh2ssizj61yNW9e-mr4aYp.hex
